--- a/index.html
+++ b/index.html
@@ -14,17 +14,13 @@
          <img src="./img/layer.svg" alt="places I have been">
       </div>
       <div class="image-container animate-2">
-         <img src="./img/map-layer-1.svg" alt="world map">
-         <img src="./img/map-layer-2.svg" alt="world map">
-         <img src="./img/map-layer-3.svg" alt="world map">
-         <img src="./img/map-layer-4.svg" alt="world map">  
+         <img src="./img/world-map.png" alt="world map">
+         <img src="./img/layer.svg" alt="places I have been">
       </div>
-      <div class="image-container animate-1">
-        <div>
-         <button class="btn btn-primary">Hello</button>
-         <button class="btn btn-warning">Click</button>
-         <button class="btn btn-danger">me</button>  
-        </div>
+      <div class="image-container animate-1 animated-text">
+        <p>Animate3d is the bee's knee's</p>
+        <p>Animate3d is the bee's knee's</p>
+        <p>Animate3d is the bee's knee's</p>
       </div>
    </main>
 
