--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
    <meta charset="UTF-8">
    <title>jQuery animate3d</title>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="./styles/bootstrap.css">
    <link rel="stylesheet" href="./styles/style.css">
    <link href="https://fonts.googleapis.com/css?family=Lato:100,400" rel="stylesheet">
