--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="text-center">Animate3d jQuery Extension</h1>
       <div class="row text-center">
          <a class="btn" href="https://github.com/putnamn21/jquery-animate3d" target="_blank">View On Github <i class="icon-github-circled"></i></a>
-         <a class="btn" href="./" download="animate3d.zip">Download .zip <i class="icon-download"></i></a>
+         <a class="btn" href="./animated3d.zip">Download .zip <i class="icon-download"></i></a>
          
       </div>
       <div class="row">
